# telicent-rdf-transform

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE.txt  README.md  dev_setup.sh  pyproject.toml
docs/: ARCHITECTURE.md  MAPPING_GUIDE.md
examples/basic_mapper/: README.md  config.yaml  input.ttl  mappings.ttl  output.ttl  run.py
examples/batch_file_mapper/: README.md  __init__.py  config.yaml  mapper.py  mappings.ttl  transform_countries.py
examples/batch_file_mapper/input/: countries.ttl  regions.ttl
examples/batch_file_mapper/output/: countries.ttl  regions.ttl
examples/ies4_to_iesnext_mapper/: mapping-config.yaml  resource-mapping.ttl  test_ies4_to_iesnext_mappings.py
examples/ies4_to_iesnext_mapper/fixtures/complex_mappings/: crossing.ttl  duration.ttl  make.ttl  person.ttl  pluriverse.ttl  recurrent_period_representation.ttl
examples/ies4_to_iesnext_mapper/golden/complex_mappings/: crossing.ttl  duration.ttl  make.ttl  pluriverse.ttl  recurrent_period_representation.ttl
examples/telicent_mapper/: Dockerfile  __init__.py  example.env  labels.py  mapper.py
examples/telicent_mapper/tests/: test_telicent_mapper_integration.py  test_telicent_mapper_unit.py
examples/telicent_mapper/tests/fixtures/: sample1.ttl  sample2.jsonld  test_config.yaml
examples/telicent_mapper/tests/golden/: sample1_headers.json  sample1_output.ttl
rdf_transform/: __init__.py  config.py  formats.py  transform.py
tests/: __init__.py  test_rdf_transform.py
